--- a/core/app/views/ProcureUnits/index_v3.html
+++ b/core/app/views/ProcureUnits/index_v3.html
@@ -111,14 +111,14 @@
           </div>
           <div class="row-fluid">
             <div class="input-prepend input-append inline">
-              <a href="@{ProcureUnits.planView(tomorrow1)}" class="btn btn-primary" rel="popover"
-                 content="明天需要交货的采购计划" data-loading="loading">明天计划</a>
-              <a href="@{ProcureUnits.planView(tomorrow2)}" class="btn btn-primary" rel="popover"
-                 content="后天需要交货的采购计划" data-loading="loading">后天计划</a>
-              <a href="@{ProcureUnits.planView(tomorrow3)}" class="btn btn-primary" rel="popover"
-                 content="第三天需要交货的采购计划" data-loading="loading">大后天计划</a>
-              <a href="@{ProcureUnits.noPlaced()}" class="btn btn-primary" rel="popover" content="发货时间为当天,
-                          同时货物还没有抵达货代的采购计划" data-loading="loading">当天未抵达</a>
+              <a href="@{ProcureUnits.planView(tomorrow1)}" class="btn btn-default" rel="popover"
+                 content="明天需要交货的采购计划" data-loading="loading"><b>明天计划</b></a>
+              <a href="@{ProcureUnits.planView(tomorrow2)}" class="btn btn-default" rel="popover"
+                 content="后天需要交货的采购计划" data-loading="loading"><b>后天计划</b></a>
+              <a href="@{ProcureUnits.planView(tomorrow3)}" class="btn btn-default" rel="popover"
+                 content="第三天需要交货的采购计划" data-loading="loading"><b>大后天计划</b></a>
+              <a href="@{ProcureUnits.noPlaced()}" class="btn btn-default" rel="popover" content="发货时间为当天,
+                          同时货物还没有抵达货代的采购计划" data-loading="loading"><b>当天未抵达</b></a>
             </div>
 
             <div class="input-prepend input-append inline">
