--- a/core/app/views/Shipments/_paymentunits_v3.html
+++ b/core/app/views/Shipments/_paymentunits_v3.html
@@ -116,6 +116,9 @@
           </button>
         #{/if}
     </form>
+
+    <button id="improtPayment" class="btn btn-success">导入运输费用</button>
+
       #{if ship.whouse?.country?.contains('DE') }
         <a class="btn btn-info" data-method='POST' data-disable-with='申请中...' href='@{PaymentUnits.applyDutyFromShipment(ship.id)}' style="display: none">
           计算预交关税
