sku物流费用占比计算修改

--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -174,9 +174,7 @@
           </a>
         #{/elseif}
     </td>
-    <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}<br>
-      <span style="color:red">${unit.isDedicated?'(专线)':''}</span>
-    </td>
+    <td style="color:${unit.shipType.rgb()}">${unit.shipType?.label()}</td>
     <td>#{time_tooltip time:unit.attrs.planDeliveryDate/}</td>
     <td>#{time_tooltip time:unit.attrs.planShipDate/}</td>
     <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
