--- a/core/app/views/Shipments/show.html
+++ b/core/app/views/Shipments/show.html
@@ -94,12 +94,12 @@
 <div id="fba_carton_contents_modal" class="modal fade bs-example-modal-lg">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header"><h3 class="modal-title">包装信息</h3></div>
+      <div class="modal-header"><h4 class="modal-title">包装信息</h4></div>
       <div class="modal-body">
         <div id="refresh_div"></div>
       </div>
       <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+        <button class="btn btn-default btn-xs" data-dismiss="modal" aria-hidden="true">关闭</button>
       </div>
     </div>
   </div>
