--- a/core/app/views/Shipments/_shipment.html
+++ b/core/app/views/Shipments/_shipment.html
@@ -159,6 +159,10 @@
         <div class="col-sm-2">
           <input class="form-control" value="${ship.totalUnitQuaTest()}" readonly>
         </div>
+        <label for="" class="col-sm-1 control-label">实际总重量/总体积</label>
+        <div class="col-sm-2">
+          <input class="form-control" name="ship.totalVolumeShipment" value="${ship.totalRealWeight()} kg / ${ship.totalRealVolume()} m³" readonly/>
+        </div>
       </div>
 
       <div class="form-group">
