--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -34,9 +34,7 @@
     </td>
     <td>${ship.cooper?.name}</td>
     <td>${ship.internationExpress}</td>
-    <td style="color:${ship.type.rgb()}">
-    ${ship.type?.label()}<span style="color:red">${ship.isDedicated?'(专线)':''}</span>
-    </td>
+    <td style="color:${ship.type.rgb()}">${ship.type?.label()}</td>
     <td>${ship.whouse?.name}</td>
     <td style="color:${ship.state.rgb()}">${ship.state.label()}</td>
     <td>#{time_tooltip_v3 time:ship.dates?.planBeginDate/}</td>
